<resources>
    <string name="app_name">Cозерцатель</string>
    <string name="contemplator">Cозерцатель</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_profile">профиль</string>
    <string name="menu_map">карта</string>
    <string name="menu_references">обращения</string>
    <string name="menu_settings">настройки</string>
    <string name="menu_other">другое</string>

    <string name="title_activity_map_labels">Cозерцатель</string>
    <string name="token_map">pk.eyJ1Ijoia29uZHJhdGtvdiIsImEiOiJjamE3ZzFtY3hiMGx0MnFsZzVvbnJhbmRkIn0.IM6EXYHiivmo8_mxz40YFw</string>
    <string name="title_activity_references_list">Обращения</string>
    <string name="title_activity_add_label">Map</string>
    <string name="title_activity_profile">Профиль</string>

    <string name="profile_change_the_name">изменить имя</string>
    <string name="profile_make_a_new_photo">сделать новое фото</string>
    <string name="profile_choose_a_photo_from_the_gallery">выбрать фото из галереи</string>
    <string name="profile_mail">почта</string>
    <string name="profile_phone">телефон</string>
    <string name="profile_city">город</string>
    <string name="profile_leave_tags_anonymously">оставлять метки анонимно(не будет указанно ваше имя в обращении)</string>


    <string name="title_activity_setting">Настройки</string>

    <string name="alcohol_drinking">распитие алкоголя</string>
    <string name="hooliganism">хулиганство</string>
    <string name="fight">драка</string>
    <string name="crime">преступление</string>
    <string name="wrong_parking">не правильная парковка</string>
    <string name="loud_music">громкая музыка</string>
    <string name="suspicious_object">подозрительный предмет</string>
    <string name="vandalism">вандализм</string>
    <string name="other">другое</string>

    <string-array name="array_violations">
        <item>распитие алкоголя</item>
        <item>хулиганство</item>
        <item>драка</item>
        <item>преступление</item>
        <item>не правильная парковка</item>
        <item>громкая музыка</item>
        <item>подозрительный предмет</item>
        <item>вандализм</item>
        <item>другое</item>
    </string-array>

    <string-array name="array_violations_enum">
        <item>alcohol_drinking</item>
        <item>hooliganism</item>
        <item>fight</item>
        <item>crime</item>
        <item>wrong_parking</item>
        <item>loud_music</item>
        <item>suspicious_object</item>
        <item>vandalism</item>
        <item>other</item>
    </string-array>

    <string name="ok">принять</string>
    <string name="change">изменить</string>
    <string name="cancel">отмена</string>
    <string name="sign_in">войти</string>
    <string name="registration">регистрация</string>
    <string name="sign_up">зарегестрироваться</string>
    <string name="name">введите имя</string>
    <string name="avto_sign_in">автоматически входить в систему</string>
    <string name="save_name">сохранить имя и пароль</string>

    <string name="enter_name">введите новое имя</string>
    <string name="enter_password">введите пароль</string>
    <string name="post_password">повторите пароль</string>
    <string name="add_city">введите ваш город</string>
    <string name="dialog_no_sign">Для добовления метки или комментария необходимо авторизоваться! Зайдите в свой профиль!</string>

    <string name="leave_a_comment...">оставте комментарий....</string>
    <string name="title_activity_violation_profile">ViolationProfileActivity</string>
    <string name="title_activity_image_violation">ImageViolationActivity</string>
    <string name="title_activity_add_violation">Добавить метку</string>


    <string name="add_violation_body">описание</string>
    <string name="add_violation_date">время</string>
    <string name="add_violation_address">адрес</string>
    <string name="add_violation_add_photos">добавьте фото</string>
    <string name="add_violation_add">отправить</string>
    <string name="leave_a_description...">оставте описание...</string>
    <string name="title_activity_registration">Регистрация</string>
    <string name="title_activity_authorization">Aвторизация</string>

</resources>
