<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:iconTintMode="src_atop"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_gallery"
            android:iconTint="@color/colorNo"
            android:title="@string/menu_map"/>
        <item
            android:id="@+id/nav_references"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_references"/>
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_settings"/>
        </menu>
    </item>

</menu>
