<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kondratkov.ermineapps.observerapp.view.addviolation.AddViolationActivity"
    tools:showIn="@layout/activity_add_violation"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView_add_violation_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ДРАКА"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="7dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="480dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_add_violation_type"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/add_violation_address"
                    android:focusable="true"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="67dp"/>

                <EditText
                    android:id="@+id/editText_add_violation_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    tools:layout_editor_absoluteX="80dp"
                    tools:layout_editor_absoluteY="53dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/add_violation_date"
                    app:layout_constraintBottom_toBottomOf="@+id/editText_add_violation_date"
                    tools:layout_editor_absoluteX="0dp"/>

                <EditText
                    android:id="@+id/editText_add_violation_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1.80"
                    android:ems="10"
                    android:inputType="date"
                    tools:layout_editor_absoluteX="80dp"
                    tools:layout_editor_absoluteY="115dp"/>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="258dp">

                <LinearLayout
                    android:id="@+id/linearLayout_add_violation_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/add_violation_body"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editText_add_violation_body"
                    tools:layout_editor_absoluteX="0dp"/>

                <EditText
                    android:id="@+id/editText_add_violation_body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/leave_a_description..."
                    android:inputType="textMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/editText_add_violation_date"
                    tools:layout_editor_absoluteX="80dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
